--- a/styles/main.css
+++ b/styles/main.css
@@ -18,7 +18,7 @@ body {
     border: 3px solid black;
     display: flex;
     flex-direction: column;
-    min-width: 40vw;
+    width: 40rem;
     min-height: 80vh;
     padding: 10px;
     background-color: black;
@@ -35,7 +35,9 @@ body {
 }
 
 .display > div {
-    text-align: right;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
 
 .pad {
@@ -52,18 +54,42 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 1.6rem;
+    cursor: pointer;
 }
 
 .pad > .backspace {
     width: 75%;
 }
 
+.pad > div:hover {
+    background-color: rgb(175, 175, 175);
+}
+
 .smallDisplay {
     flex: 1 1 auto;
     font-size: 2rem;
+    overflow-x: auto;
 }
 
 .mainDisplay {
     flex: 5 1 auto;
     font-size: 3rem;
+    overflow-x: scroll;
+    overflow-y: hidden;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: dimgrey;
+}
+
+::-webkit-scrollbar-thumb {
+    background: white;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: wheat;
 }
